# MPE-Calculator-Skin

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md
examples/: README.md  basic_usage.py  mpe_comparison.py  photoacoustic_scenarios.py  repetitive_pulse_analysis.py
examples/outputs/: basic_usage_output.txt  mpe_comparison_output.txt  photoacoustic_scenarios_output.txt  repetitive_pulse_analysis_output.txt
paper/: paper.md
src/laser_mpe/: __init__.py  correction_factors.py  engine.py  icnirp_skin.py  legacy.py  repetitive_pulse.py  skin_parameters.py
tests/: test_correction_factors.py  test_engine_js.mjs  test_skin_mpe.py  test_skin_parameters.py  verify_exhaustive.py
tests/lsp/: test_bundle.mjs  test_canonicalize.mjs  test_factory.mjs  test_schema.py  test_ui_helpers.mjs  test_validate.mjs  test_worker.mjs
tests/outputs/: SUMMARY.txt  test_correction_factors_output.txt  test_skin_mpe_output.txt  test_skin_parameters_output.txt  verify_exhaustive_output.txt
web/: README.md  build.py  build_ajv_entry.js  calculator.jsx  compute-sri.js  config.js  engine.js  index.html  lsp.worker.js  package.json
web/lsp/: canonicalize.js  factory.js  schema.json  validate.js
web/standards/: README.md  ansi_z136_2022.json  icnirp_2013.json
